# ProyectoLp3

./: README.md
Grupo/lab02/: .gitignore  Hello.java  Program.java  README.md  TestProgram01.java  TestProgram02.java  TestProgram03.java  TestProgram04.java
Grupo/lab03/: README.md  comandos.txt
Grupo/lab03/Peor/: worstc.cpp
Grupo/lab03/RangoPeor/: RangPeor2.cpp
Grupo/lab04/: Codigomatriz.cpp  README.md  codigomatrizp.cpp  con threads.jfif  sin threads.jfif
Grupo/lab05/: README.md
Grupo/lab05/FightingBilly/: HorseRaceQt.pro  HorseRaceQt.pro.user.738743e  horsesec2.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Grupo/lab05/FightingBilly/docs/html/: _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2debug_2moc__horsesec2_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2debug_2moc__horsesec2_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2debug_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2debug_2moc__mainwindow_8cpp.js  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2ui__mainwindow_8h.html  (+107 more)
Grupo/lab05/FightingBilly/html/: annotated.html  annotated_dup.js  class_mi_clase-members.html  class_mi_clase.html  classes.html  doxygen_crawl.html  navtreedata.js  navtreeindex0.js
Grupo/lab05/FightingBilly/latex/: annotated.tex  class_mi_clase.tex  refman.tex
Grupo/lab07/: Tour.db  edges.sql  nodes.sql  types.sql  users.sql
Parcial/: README.md
Parcial/End/Tours/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  registerwindow.ui
Parcial/Parcial/: MatrizSecuencial.cpp  MatrizThread.cpp
Parcial/Parcial 2/: README.md
Parcial/Parcial 2/Tour/: CMakeLists.txt  graph.cpp  graph.h  graph.ui  main.cpp  mainwindow.cpp  mainwindow.h  registerwindow.cpp  registerwindow.h  registerwindow.ui
Parcial/Parcial_2/: README.md
Parcial/Parcial_2/Tour/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  mainwindow.cpp  registerwindow.cpp  registerwindow.h
Sistemas/: code_cristian.txt  code_lamport.txt  code_semaforo.txt
Solitario/: raiz digital.cpp
Solitario/lab06/: Showdown.sql
(+35 files in other folders)
